[build-system]
requires = ["setuptools >= 61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "picogen"
version = "0.0.13"
description = "Tiny static website generator."
readme = "README.md"
license = { file = "LICENSE" }
maintainers = [{ name = "vlatan" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: End Users/Desktop",
    "Environment :: Console",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Content Management System",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Text Processing :: Markup :: HTML",
]
requires-python = ">=3.8"
dependencies = [
    "beautifulsoup4 == 4.12.3",
    "Jinja2 == 3.1.4",
    "Markdown == 3.6",
    "python-dotenv == 1.0.1",
    "python-slugify == 8.0.4",
]

[project.scripts]
picogen = "picogen.cli:main"

[project.urls]
"Homepage" = "https://github.com/vlatan/picogen"
